--- a/style.css
+++ b/style.css
@@ -160,4 +160,8 @@ input[type="text"]{
     .optiones{
         gap: 20px;
     }
+    .option{
+        width: 150px;
+        height: 150px;
+    }
 }
